<resources>
    <string name="app_name">e-commerce</string>
    <string name="sign_in_title">Sign in</string>
    <string name="sign_up_title">Sign up</string>
    <string name="username_hint">Username</string>
    <string name="email_hint">Email</string>
    <string name="phone_hint">Phone</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="cancel_tittle">Cancel</string>

    <string name="create_product_tittle">Create Product</string>
    <string name="name_hint">Name</string>
    <string name="product_type_hint">Type</string>
    <string name="stock_hint">Stock</string>
    <string name="value_hint">Value</string>
    <string name="image_hint">Image</string>

    <string name="names_hint">Names</string>
    <string name="lastnames_hint">Lastnames</string>
    <string name="address_hint">Address</string>
    <string name="city_hint">City</string>
</resources>